<resources>
    <string name="app_name">Online_Shop</string>
    <string name="technology">technology</string>
    <string name="zxc">ZXC</string>
    <string name="haveAcc">Уже есть аккаунт? Войдите</string>
    <string name="name">Имя</string>
    <string name="email">Email</string>
    <string name="pass">Пароль</string>
    <string name="crate">Создать</string>
    <string name="crate_account">Создать аккаунт</string>
    <string name="home">Главная</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="categoriesActivity">CategoriesActivity</string>
    <string name="title_home">Home</string>
    <string name="search">Search</string>
    <string name="shop">Корзина</string>
    <string name="sale">-50%</string>
    <string name="person">Профиль</string>
    <string name="categories">Категории</string>
    <string name="Favorites">Избранное</string>
    <string name="Gifts">Подарки</string>
    <string name="Popular">Популярное</string>
    <string name="Profile">Профиль</string>
    <string name="Create_acc">Создать аккаунт</string>
    <string name="to_come">Войти</string>
    <string name="entry">Вход</string>
    <string name="notHaveAcc">Нет аккаунта? Создайте его сейчас</string>
</resources>