<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.online_shop.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.example.online_shop.ui.search.SearchFragment"
        android:label="@string/search"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/navigation_shop"
        android:name="com.example.online_shop.ui.shop.ShopFragment"
        android:label="@string/shop"
        tools:layout="@layout/fragment_shop" />


    <fragment
        android:id="@+id/navigation_person"
        android:name="com.example.online_shop.ui.person.PersonFragment"
        android:label="@string/person"
        tools:layout="@layout/fragment_person" />


</navigation>