<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/create_account"

    android:background="@color/backgroundColor"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/tvCreateAcc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal = "true"
        android:layout_marginTop="71dp"
        android:text="@string/crate_account"
        android:textAppearance="@style/text_entrance" />

    <LinearLayout
        android:id="@+id/input_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvCreateAcc"
        android:layout_gravity="center"
        android:layout_marginStart="48sp"
        android:layout_marginTop="121dp"
        android:layout_marginEnd="48sp"

        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20sp"
            android:orientation="vertical">


            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/inputForm"
                android:text="@string/name" />

            <EditText

                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/name"
                android:paddingLeft="15dp"
                android:textColorHint="@color/white"
                android:background="@drawable/edit_text_style" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_below="@+id/name"
            android:layout_marginBottom="20sp"
            android:orientation="vertical">


            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/inputForm"
                android:textColorHint="#FFFFFF"
                android:text="@string/email" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/email"
                android:paddingLeft="15dp"
                android:textColorHint="@color/white"
                android:background="@drawable/edit_text_style" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/email"
            android:layout_marginBottom="20sp"
            android:orientation="vertical">


            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/inputForm"
                android:text="@string/pass" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/pass"
                android:textColorHint="@color/white"
                android:paddingLeft="15dp"
                android:background="@drawable/edit_text_style" />

        </LinearLayout>

    </LinearLayout>

    <Button

        android:id="@+id/regist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/input_data"
        android:layout_gravity="center"
        android:layout_marginLeft="30sp"
        android:layout_marginTop="100dp"
        android:layout_marginRight="30sp"
        style="@style/buttonText"
        android:text="@string/crate"
        android:textAllCaps="false"
        android:background="@drawable/my_button"/>

    <TextView
        android:id="@+id/sign"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:clickable="true"
        android:gravity="center"
        android:onClick="ClickText"
        android:text="@string/haveAcc"
        android:layout_below="@+id/regist"
        android:textAppearance="@style/next"
        android:textColor="@color/textColorBtn"/>

    <TextView
        android:id="@+id/skip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sign"
        android:layout_marginLeft="30sp"
        android:layout_marginTop="120dp"

        android:layout_marginRight="30sp"
        android:gravity="center"
        android:onClick="ClickText"
        android:text="Пропустить"
        android:textAppearance="@style/next" />

</RelativeLayout>