<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    android:background="@color/my_white"

    android:id="@+id/activity_main"
    tools:context=".ui.home.HomeFragment">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/Toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="Arial"



        app:subtitleTextColor="@color/black"
        app:title="@string/home" />

    <android.support.v7.widget.RecyclerView

        android:id="@+id/recycleList"
        android:orientation="horizontal"
        app:layoutManager="android.support.v7.widget.LinearLayoutManager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"


        tools:listitem="@layout/adapter_first_item" />


    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_columnWeight="1">

            <ImageView
                android:id="@+id/iv_categories"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"


                android:src="@drawable/baseline_keyboard_backspace_black_48" />

            <TextView
                android:id="@+id/tv_categories"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/iv_categories"
                android:layout_centerHorizontal="true"

                style="@style/MyTextStyleForHomeFragment"
                android:text="@string/categories" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_columnWeight="1">

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/iv_favorites"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"

                android:src="@drawable/baseline_keyboard_backspace_black_48" />

            <TextView
                android:id="@+id/tv_favorites"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/iv_favorites"
                android:layout_centerHorizontal="true"

                style="@style/MyTextStyleForHomeFragment"
                android:text="@string/Favorites" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="2"
            android:layout_columnWeight="1">

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/iv_gifts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"

                android:src="@drawable/baseline_keyboard_backspace_black_48" />

            <TextView
                android:id="@+id/tv_gifts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/iv_gifts"
                android:layout_centerHorizontal="true"

                style="@style/MyTextStyleForHomeFragment"
                android:text="@string/Gifts" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="3"
            android:layout_columnWeight="1">

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/iv_popular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"

                android:src="@drawable/baseline_keyboard_backspace_black_48" />

            <TextView
                android:id="@+id/tv_popular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/iv_popular"
                android:layout_centerHorizontal="true"

                style="@style/MyTextStyleForHomeFragment"
                android:text="@string/Popular" />
        </RelativeLayout>
    </GridLayout>


    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Распродажа"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"

            android:layout_marginBottom="8sp"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/sale_list"
            android:layout_width="0dp"
            android:layout_height="0dp"

            android:scrollbars="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            android:fitsSystemWindows="true"
            android:layout_marginBottom="46dp"
            tools:listitem="@layout/sale_item" />






    </android.support.constraint.ConstraintLayout>


</LinearLayout>