<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_weight="0"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:background="@color/backgroundColor"
    tools:context=".RegisterOrLoginActivity">

    <RelativeLayout

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_weight="5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_gravity="center"
            android:orientation="vertical">

            <TextView

                android:id="@+id/zxc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|top"
                android:layout_marginTop="160dp"
                android:text="@string/zxc"
                android:textAppearance="@style/zxc" />

            <TextView

                android:id="@+id/technology"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="50sp"
                android:text="@string/technology"
                android:textAppearance="@style/technology" />


        </LinearLayout>


        <ImageView

            android:id="@+id/ellipse_8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            app:srcCompat="@drawable/ellipse" />

        <ImageView
            android:id="@+id/vector"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@drawable/vector" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:gravity="bottom"
            android:orientation="vertical">

            <android.support.v7.widget.AppCompatButton

                android:id="@+id/regist"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="30sp"
                android:layout_marginRight="30sp"
                android:text="Button"
                android:textAllCaps="false"
                android:background="@drawable/my_button"/>

            <TextView
                android:id="@+id/sign"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:layout_marginLeft="30sp"
                android:layout_marginRight="30sp"
                android:clickable="true"
                android:gravity="center"
                android:onClick="ClickText"
                android:textAppearance="@style/next"
                android:textColor="@color/textColorBtn"
                android:text="@string/haveAcc" />

            <TextView
                android:id="@+id/skip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30sp"
                android:layout_marginTop="40sp"
                android:layout_marginRight="30sp"
                android:layout_marginBottom="40sp"
                android:onClick="ClickText"
                android:text="Пропустить"
                android:textAppearance="@style/next"
                android:gravity="center"
                />


        </LinearLayout>


    </RelativeLayout>


</LinearLayout>